Pin ike-tooling:126; SNAPSHOT wiring; ws:create hygiene
Bump ike-tooling from 125 to 126 and switch cross-repo refs to
1-SNAPSHOT in ike-parent's pluginManagement and the reactor root.

WsCreateMojo emits <version>1-SNAPSHOT</version> (was 1.0.0-SNAPSHOT)
to match the single-segment version convention, and now seeds
.mvn/jvm.config at workspace root with the standard flag
(--sun-misc-unsafe-memory-access=allow) so hand-edits start from a
correct baseline.